--- a/app/src/main/res/layout/activity_signup_verification.xml
+++ b/app/src/main/res/layout/activity_signup_verification.xml
@@ -12,7 +12,7 @@
         android:id="@+id/textView"
         android:layout_width="250dp"
         android:layout_height="50dp"
-        android:drawableRight="@drawable/logoSmall"
+        android:drawableRight="@drawable/logosmall"
         android:fontFamily="casual"
         android:text="ChatterBox"
         android:textAlignment="center"
