--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    tools:context=".MainActivity">
+    tools:context=".SearchActivity">
 
     <LinearLayout
         android:id="@+id/topBar"
@@ -18,70 +18,69 @@
         app:layout_constraintVertical_bias="0.0"
         tools:layout_editor_absoluteX="-16dp">
 
+        <ImageButton
+            android:id="@+id/btnBack"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:background="@color/splashback"
+            android:contentDescription="back"
+            app:srcCompat="@drawable/iconback" />
+
         <TextView
             android:id="@+id/textView4"
             android:layout_width="350dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/splashback"
-            android:drawableLeft="@drawable/logosmall"
-            android:drawablePadding="10dp"
             android:fontFamily="monospace"
+            android:gravity="fill"
             android:padding="10dp"
-            android:text="ChatterBox"
+            android:text="Search User"
             android:textColor="@color/black"
-            android:textSize="34sp"
-            android:textStyle="bold" />
-
-        <ImageButton
-            android:id="@+id/btnSearch"
-            android:layout_width="60dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:background="@color/splashback"
-            android:contentDescription="search"
-            app:srcCompat="@drawable/iconsearch" />
+            android:textSize="24sp" />
 
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/bottombar"
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        tools:layout_editor_absoluteX="16dp">
+        app:layout_constraintTop_toTopOf="@+id/topBar"
+        app:layout_constraintVertical_bias="0.118"
+        tools:layout_editor_absoluteX="0dp">
 
-        <ImageButton
-            android:id="@+id/btnChat"
-            android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/txtUsername"
+            android:layout_width="325dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:backgroundTint="@color/splashback"
-            android:contentDescription="chat"
-            app:srcCompat="@drawable/iconchat" />
+            android:ems="10"
+            android:hint="Username"
+            android:inputType="text"
+            android:padding="10dp" />
 
         <ImageButton
-            android:id="@+id/btnProfile"
-            android:layout_width="wrap_content"
+            android:id="@+id/btnSearch2"
+            android:layout_width="50dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:backgroundTint="@color/splashback"
-            android:contentDescription="profile"
-            app:srcCompat="@drawable/iconprofile" />
+            android:background="@null"
+            android:contentDescription="search2"
+            android:padding="10dp"
+            app:srcCompat="@drawable/iconsearch" />
     </LinearLayout>
 
-    <FrameLayout
-        android:id="@+id/frame"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler"
         android:layout_width="match_parent"
-        android:layout_height="592dp"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-    </FrameLayout>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.275"
+        tools:layout_editor_absoluteX="0dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
