--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -30,7 +30,7 @@
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -60,6 +60,16 @@
             android:padding="10dp"
             tools:layout_editor_absoluteX="28dp"
             tools:layout_editor_absoluteY="223dp" />
+
+        <EditText
+            android:id="@+id/txtUserName"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_margin="10dp"
+            android:ems="10"
+            android:hint="Choose your username"
+            android:inputType="text"
+            android:padding="10dp" />
 
         <EditText
             android:id="@+id/txtPass"
