--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -56,8 +56,10 @@
         <EditText
             android:id="@+id/txtUsername"
             android:layout_width="325dp"
-            android:layout_height="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginLeft="10dp"
             android:layout_weight="1"
+            android:background="@drawable/text_rounded_corner"
             android:ems="10"
             android:hint="Username"
             android:inputType="text"
@@ -66,7 +68,7 @@
         <ImageButton
             android:id="@+id/btnSearch2"
             android:layout_width="50dp"
-            android:layout_height="match_parent"
+            android:layout_height="50dp"
             android:layout_weight="1"
             android:background="@null"
             android:contentDescription="search2"
