--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="splashback">#877993</color>
     <color name="background">#e7d7f5</color>
+    <color name="sender">#2196F3</color>
+    <color name="receiver">#D5D2D2</color>
 </resources>
