--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -108,6 +108,7 @@
         android:layout_width="120dp"
         android:layout_height="60dp"
         android:text="Login"
+        android:textSize="18sp"
         app:cornerRadius="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
