--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -38,18 +38,37 @@
             android:padding="10dp"
             android:text="Verify Now"
             app:cornerRadius="5dp" />
+
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/profilepicImg"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/circular_bg"
-        android:backgroundTint="@color/splashback"
-        android:padding="10dp"
-        android:src="@drawable/person_icon" />
+        android:elevation="5dp"
+        android:gravity="center">
+
+        <ImageView
+            android:id="@+id/profilepicImg"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="20dp"
+            android:layout_marginBottom="10dp"
+            android:backgroundTint="@color/splashback"
+            android:scaleType="fitXY"
+            android:src="@drawable/person_icon" />
+
+        <ImageButton
+            android:id="@+id/editpicBtn"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginLeft="90dp"
+            android:layout_marginTop="70dp"
+            android:background="@null"
+            android:contentDescription="edit"
+            android:src="@drawable/icon_edit_pic" />
+    </RelativeLayout>
 
     <EditText
         android:id="@+id/profilenameTxt"
