visual errors and recent chats update error fixed

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,9 +10,10 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="248dp"
+        android:layout_width="wrap_content"
         android:layout_height="47dp"
         android:drawableRight="@drawable/logosmall"
+        android:drawablePadding="10dp"
         android:fontFamily="casual"
         android:text="ChatterBox"
         android:textAlignment="center"
@@ -41,6 +42,8 @@
             android:id="@+id/txtLoginEmail"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:layout_margin="5dp"
+            android:background="@drawable/text_rounded_corner"
             android:ems="10"
             android:hint="Email"
             android:inputType="text"
@@ -53,6 +56,8 @@
             android:id="@+id/txtPassword"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:layout_margin="5dp"
+            android:background="@drawable/text_rounded_corner"
             android:ems="10"
             android:hint="Password"
             android:inputType="textPassword"
