--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -10,9 +10,10 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="250dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:drawableRight="@drawable/logosmall"
+        android:drawablePadding="10dp"
         android:fontFamily="casual"
         android:text="ChatterBox"
         android:textAlignment="center"
@@ -55,6 +56,7 @@
             android:layout_height="wrap_content"
             android:padding="15dp"
             android:text="An email will be sent to your registered email account with a password reset link."
+            android:textColor="@color/black"
             android:textSize="17sp" />
 
         <Button
@@ -82,7 +84,7 @@
     <TextView
         android:id="@+id/textView3"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:fontFamily="sans-serif-smallcaps"
         android:padding="15dp"
         android:text="Reset Your Password:"
