--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -10,9 +10,10 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="250dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:drawableRight="@drawable/logosmall"
+        android:drawablePadding="10dp"
         android:fontFamily="casual"
         android:text="ChatterBox"
         android:textAlignment="center"
@@ -42,6 +43,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_margin="10dp"
+            android:background="@drawable/text_rounded_corner"
             android:ems="10"
             android:hint="Enter your full name"
             android:inputType="text"
@@ -54,6 +56,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_margin="10dp"
+            android:background="@drawable/text_rounded_corner"
             android:ems="10"
             android:hint="Enter your email"
             android:inputType="text"
@@ -66,6 +69,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_margin="10dp"
+            android:background="@drawable/text_rounded_corner"
             android:ems="10"
             android:hint="Choose your username"
             android:inputType="text"
@@ -76,8 +80,9 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_margin="10dp"
+            android:background="@drawable/text_rounded_corner"
             android:ems="10"
-            android:hint="Enter your password'"
+            android:hint="Enter your password"
             android:inputType="textPassword"
             android:padding="10dp"
             tools:layout_editor_absoluteX="38dp"
@@ -88,6 +93,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_margin="10dp"
+            android:background="@drawable/text_rounded_corner"
             android:ems="10"
             android:hint="Confirm your password"
             android:inputType="textPassword"
