--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -10,14 +10,16 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="250dp"
+        android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:drawableRight="@drawable/logosmall"
+        android:drawablePadding="10dp"
         android:fontFamily="casual"
         android:text="ChatterBox"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="@color/black"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -34,7 +36,7 @@
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.638"
+        app:layout_constraintVertical_bias="0.675"
         tools:layout_editor_absoluteX="0dp">
 
 
@@ -43,6 +45,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_margin="10dp"
+            android:background="@drawable/text_rounded_corner"
             android:ems="10"
             android:hint="Enter your old password"
             android:inputType="textPassword"
@@ -53,8 +56,9 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_margin="10dp"
+            android:background="@drawable/text_rounded_corner"
             android:ems="10"
-            android:hint="Enter new password'"
+            android:hint="Enter new password"
             android:inputType="textPassword"
             android:padding="10dp"
             tools:layout_editor_absoluteX="38dp"
@@ -65,6 +69,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_margin="10dp"
+            android:background="@drawable/text_rounded_corner"
             android:ems="10"
             android:hint="Confirm new password"
             android:inputType="textPassword"
@@ -97,7 +102,7 @@
     <TextView
         android:id="@+id/textView3"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:fontFamily="sans-serif-smallcaps"
         android:padding="15dp"
         android:text="Change Your Password:"
