--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -9,14 +9,12 @@
     tools:context=".ChatActivity">
 
     <LinearLayout
-        android:id="@+id/linearLayout3"
+        android:id="@+id/top"
         android:layout_width="match_parent"
         android:layout_height="80dp"
+        android:layout_alignParentTop="true"
         android:background="@color/splashback"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
         tools:layout_editor_absoluteX="0dp">
 
         <ImageButton
@@ -46,11 +44,11 @@
             <TextView
                 android:id="@+id/txtNameChat"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:fontFamily="monospace"
                 android:gravity="center_vertical"
-                android:padding="5dp"
+                android:paddingLeft="5dp"
                 android:text="name"
                 android:textColor="@color/black"
                 android:textSize="20sp"
@@ -59,10 +57,11 @@
             <TextView
                 android:id="@+id/txtusernameChat"
                 android:layout_width="match_parent"
-                android:layout_height="35dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:padding="5dp"
+                android:paddingLeft="5dp"
                 android:text="username"
+                android:textColor="@color/black"
                 android:textSize="16sp" />
         </LinearLayout>
     </LinearLayout>
@@ -71,23 +70,20 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="580dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/linearLayout3"
-        app:layout_constraintVertical_bias="0.529"
-        tools:layout_editor_absoluteX="0dp" />
+        android:layout_above="@id/bottom"
+        android:layout_below="@id/top"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="80dp" />
 
     <LinearLayout
+        android:id="@+id/bottom"
         android:layout_width="match_parent"
         android:layout_height="69dp"
-        android:layout_marginLeft="10dp"
+        android:layout_alignParentBottom="true"
         android:gravity="center"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/linearLayout3"
-        app:layout_constraintVertical_bias="0.996">
+        tools:layout_editor_absoluteX="10dp"
+        tools:layout_editor_absoluteY="660dp">
 
         <EditText
             android:id="@+id/txtMsg"
@@ -110,4 +106,4 @@
             android:contentDescription="send"
             app:srcCompat="@drawable/iconsend" />
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
