--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -78,8 +78,9 @@
     <LinearLayout
         android:id="@+id/bottom"
         android:layout_width="match_parent"
-        android:layout_height="69dp"
+        android:layout_height="60dp"
         android:layout_alignParentBottom="true"
+        android:layout_marginBottom="10dp"
         android:gravity="center"
         android:orientation="horizontal"
         tools:layout_editor_absoluteX="10dp"
@@ -87,19 +88,28 @@
 
         <EditText
             android:id="@+id/txtMsg"
-            android:layout_width="match_parent"
+            android:layout_width="250dp"
             android:layout_height="match_parent"
+            android:layout_margin="5dp"
             android:layout_weight="1"
-            android:elevation="2dp"
-            android:ems="10"
-            android:hint="Write your message"
+            android:background="@drawable/text_rounded_corner"
+            android:hint="Write your message  "
             android:inputType="text"
-            android:padding="20dp"
+            android:padding="10dp"
             android:textSize="20sp" />
 
         <ImageButton
+            android:id="@+id/btnAddphoto"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@null"
+            android:contentDescription="photo"
+            app:srcCompat="@drawable/icon_addphoto" />
+
+        <ImageButton
             android:id="@+id/btnSend"
-            android:layout_width="110dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@null"
