--- a/app/src/main/res/layout/chat_message_recycler.xml
+++ b/app/src/main/res/layout/chat_message_recycler.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="8dp">
@@ -11,6 +13,14 @@
         android:layout_marginEnd="80dp"
         android:orientation="vertical"
         android:padding="8dp">
+
+        <ImageView
+            android:id="@+id/otherPhoto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:scaleType="centerInside"
+            tools:srcCompat="@drawable/icon_photo" />
 
         <TextView
             android:id="@+id/otherTxt"
@@ -29,7 +39,17 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="80dp"
+        android:orientation="vertical"
         android:padding="8dp">
+
+        <ImageView
+            android:id="@+id/myPhoto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:adjustViewBounds="true"
+            android:scaleType="centerInside"
+            tools:srcCompat="@drawable/icon_photo" />
 
         <TextView
             android:id="@+id/myTxt"
