--- a/app/src/main/res/layout/recent_chat_recycler.xml
+++ b/app/src/main/res/layout/recent_chat_recycler.xml
@@ -48,6 +48,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
-            tools:text="Username" />
+            tools:text="Last Message" />
     </LinearLayout>
 </LinearLayout>
